--- a/src/utils/.env.example
+++ b/src/utils/.env.example
@@ -1,5 +1,5 @@
-PORT="3000"
-MONGODB_USER="hw2"
-MONGODB_PASSWORD="goit"
-MONGODB_URL="mongodb+srv://hw2:goit@cluster0.7ytnu7g.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0"
-MONGODB_DB="Contacts"
+PORT=
+MONGODB_USER=
+MONGODB_PASSWORD=
+MONGODB_URL=
+MONGODB_DB=
