--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "hw2-mongodb",
+  "name": "hw3-crud",
   "version": "1.0.0",
   "description": "",
   "main": "src/index.js",
@@ -14,6 +14,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
+    "http-errors": "^2.0.0",
     "mongodb": "^6.8.0",
     "mongoose": "^8.5.1",
     "pino": "^6.11.3",
