--- a/.env
+++ b/.env
@@ -14,7 +14,6 @@ JWT_SECRET=VOQjLdrpG1TWCHhDzv3o
 APP_DOMAIN=http://localhost:3000
 
 ENABLE_CLOUDINARY=true
-BACKEND_HOST=
-CLOUD_NAME=
-API_KEY=
-API_SECRET=
+CLOUD_NAME=dkjidw1vu
+API_KEY=862977758641786
+API_SECRET=LMvsMZ6AHsEgVvqDqAAC-aBki3U
