--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "hw5-auth",
+  "name": "hw-7-mongodb",
   "version": "1.0.0",
   "description": "",
   "main": "src/index.js",
@@ -35,6 +35,7 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.7.0",
+    "@redocly/cli": "^1.20.1",
     "@types/node": "^20.14.10",
     "eslint": "^9.7.0",
     "nodemon": "^3.1.4",
