--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "nodejs-hw-mongodb",
+  "name": "hw-7-mongodb",
   "version": "1.0.0",
   "description": "",
   "main": "src/index.js",
